--- a/brouillon.html
+++ b/brouillon.html
@@ -13,6 +13,15 @@
   </head>
   <body>
     <h1 class="bg-dark-subtle text-center p-3">Brouillon 2ème journée</h1>
+    <h2>Collaborateurs:</h2>
+    <ul>
+      <li>BELFARES Mohand Ou Idir</li>
+      <li>BOTTEX Eva</li>
+      <li>DEBABZA Med Idriss</li>
+      <li>BOUCHOUCHA Khalif</li>
+      <li>CHÉRET Maïwenn</li>
+      <li>KOUSSA Rayan</li>
+    </ul>
     <h2 class="text-center .text-warning-emphasis p-2">Population mondiale</h2>
     <div class="text-center py-2 border">
       <!--	Exported from Voyant Tools (voyant-tools.org).
