--- a/home.html
+++ b/home.html
@@ -41,7 +41,101 @@
             </li>
           </ul>
         </div>
-        <div class="card col-md-10"></div>
+        <div class="col-md-10">
+          <h2 class="text-center py-4">Présentation d'équipe</h2>
+          <div class="row py-4">
+            <!-- Card 1 -->
+            <div class="col-md-4">
+              <div class="card">
+                <img
+                  src="path/to/image1.jpg"
+                  class="card-img-top"
+                  alt="Image 1"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">BELFARES Mohand Ou Idir</h5>
+                  <p class="card-text">Card 1 Subtitle or description.</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="col-md-4">
+              <div class="card">
+                <img
+                  src="path/to/image2.jpg"
+                  class="card-img-top"
+                  alt="Image 2"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">BOUCHOUCHA Khalif</h5>
+                  <p class="card-text">Card 2 Subtitle or description.</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="col-md-4">
+              <div class="card">
+                <img
+                  src="path/to/image3.jpg"
+                  class="card-img-top"
+                  alt="Image 3"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">BOTTEX Eva</h5>
+                  <p class="card-text">Card 3 Subtitle or description.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <!-- Card 1 -->
+            <div class="col-md-4">
+              <div class="card">
+                <img
+                  src="path/to/image1.jpg"
+                  class="card-img-top"
+                  alt="Image 1"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">CHÉRET Maïwenn</h5>
+                  <p class="card-text">Card 1 Subtitle or description.</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="col-md-4">
+              <div class="card">
+                <img
+                  src="path/to/image2.jpg"
+                  class="card-img-top"
+                  alt="Image 2"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">DEBABZA Med Idriss</h5>
+                  <p class="card-text">Card 2 Subtitle or description.</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="col-md-4">
+              <div class="card">
+                <img
+                  src="path/to/image3.jpg"
+                  class="card-img-top"
+                  alt="Image 3"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">KOUSSA Rayan</h5>
+                  <p class="card-text">Card 3 Subtitle or description.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script
