--- a/cat-1.html
+++ b/cat-1.html
@@ -46,19 +46,30 @@
           <hr class="my-2" />
 
           <div class="card-body">
-            <h5 class="card-title">Visu 1</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <img class="card-img" src="map.png" alt="map.svg" />
+            <h5 class="card-title">Les jeux vidéos, les mots et l’article</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Nuage des mots</h6>
+            <!--	Exported from Voyant Tools (voyant-tools.org).
+The iframe src attribute below uses a relative protocol to better function with both
+http and https sites, but if you're embedding this into a local web page (file protocol)
+you should add an explicit protocol (https if you're using voyant-tools.org, otherwise
+it depends on this server.
+Feel free to change the height and width values or other styling below: -->
+<iframe style='width: 477px; height: 365px;' src='https://voyant-tools.org/tool/Cirrus/?corpus=bdb5db85088cbca2cd1ed69fef421c00'></iframe>
 
             <ul class="list-group list-group-flush">
               <li class="list-group-item"></li>
               <li class="list-group-item">
                 <h5 class="card-title">Explication</h5>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Explicabo aliquam pariatur ab! Culpa ipsa expedita laudantium,
-                  iure dolores deleniti nemo quaerat delectus aut! Et aperiam
-                  delectus consequuntur possimus ratione dolorum.
+                  Les mots apparaissent en taille proportionnelle à leur fréquence d'utilisation et donnent une indication des sujets les plus importants et des thèmes dominants dans l'article.
+                  Type de visualisation : Textuelle, exploratoire
+                  Jeu de données : Le jeu vidéo en France : une industrie et une pratique en progression continue par : La rédaction de vie-publique.fr
+Méthodologie :
+Copier l’article dans l’outil Voyant Tools
+Générer un nuage de mots
+Observations : Le nuage de mots a mis en évidence les concepts centraux de l'article. Des termes tels que "jeu vidéo", "France", "studio", "développeurs", "chiffre d'affaires", "évolution", et d'autres ont été identifiés comme étant essentiels dans le contexte du jeu vidéo en France.
+
+
                 </p>
               </li>
             </ul>
@@ -66,38 +77,44 @@
           <hr class="my-4" />
 
           <div class="card-body">
-            <h5 class="card-title">Visu 1</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <img class="card-img" src="map.png" alt="map.svg" />
+            <h5 class="card-title">Quels sont les mots les plus fréquents dans cet article ?            </h5>
+            <h6 class="card-subtitle mb-2 text-muted">Bulle de mots</h6>
+            <iframe style='width: 477px; height: 364px;' src='https://voyant-tools.org/tool/Bubbles/?corpus=bdb5db85088cbca2cd1ed69fef421c00'></iframe>
 
             <ul class="list-group list-group-flush">
               <li class="list-group-item"></li>
               <li class="list-group-item">
                 <h5 class="card-title">Explication</h5>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Explicabo aliquam pariatur ab! Culpa ipsa expedita laudantium,
-                  iure dolores deleniti nemo quaerat delectus aut! Et aperiam
-                  delectus consequuntur possimus ratione dolorum.
+                  Les bulles de mots sont une variante du nuage de mots où la taille des bulles est également proportionnelle à la fréquence d'utilisation d'un terme, mais ici, chaque bulle est positionnée dans un espace bidimensionnel, ce qui permet de représenter plus d'informations et peut aider à identifier des clusters de concepts.
+                  Type de visualisation : Textuelle, exploratoire
+                  Jeu de données : Le jeu vidéo en France : une industrie et une pratique en progression continue par : La rédaction de vie-publique.fr
+Méthodologie :
+Copier l’article dans l’outil Voyant Tools
+Générer des bulles de mots
+Observations : L'analyse des résultats de ces visualisations indique clairement que l'article met l'accent sur l'importance de l'industrie du jeu vidéo en France, tant du point de vue culturel qu'économique.
+Les termes liés à l'industrie, tels que "studios", "éditeurs", "financement" et "chiffre d'affaires", sont bien représentés, soulignant la vitalité de ce secteur.
+La fréquence élevée du terme "France" indique que l'article se concentre spécifiquement sur la situation et le développement de l'industrie du jeu vidéo dans le contexte français.
+La mention de la croissance du chiffre d'affaires, malgré la crise sanitaire, indique une résilience dans l'industrie du jeu vidéo en France.
+La présence de termes tels que "e-sport", "formation", et "emploi" suggère également une diversification des aspects de l'industrie, englobant à la fois la pratique récréative et la professionnalisation.
+Les bulles de mots peuvent révéler des relations plus complexes entre les termes, offrant une perspective plus nuancée de la façon dont ces concepts sont interconnectés.
+
                 </p>
               </li>
             </ul>
           </div>
           <hr class="my-4" />
           <div class="card-body">
-            <h5 class="card-title">Visu 1</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <img class="card-img" src="map.png" alt="map.svg" />
+            <h5 class="card-title">Analyse des images des jeux  </h5>
+            <h6 class="card-subtitle mb-2 text-muted">Plot annotation</h6>
+            <img class="card-img" src="PlotsAnnotation.svg" alt="PlotsAnnotation.svg" width="150" height="1000"  />
 
             <ul class="list-group list-group-flush">
               <li class="list-group-item"></li>
               <li class="list-group-item">
                 <h5 class="card-title">Explication</h5>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Explicabo aliquam pariatur ab! Culpa ipsa expedita laudantium,
-                  iure dolores deleniti nemo quaerat delectus aut! Et aperiam
-                  delectus consequuntur possimus ratione dolorum.
+                  a tendance générale montre que les images tendent vers la luminosité foncée. Cela pourrait indiquer des scénarios de jeu plutôt sombres ou des environnements avec des zones d'ombre importantes.
                 </p>
               </li>
             </ul>
