--- a/cat-2.html
+++ b/cat-2.html
@@ -46,8 +46,8 @@
           <hr class="my-2" />
 
           <div class="card-body">
-            <h5 class="card-title">visu 1</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <h5 class="card-title">Jeux vidéos en réseau : Top 50 des jeux vidéos les plus vendus entre 1984 et 2014            </h5>
+            <h6 class="card-subtitle mb-2 text-muted">Force Directed Tree            </h6>
             <img class="card-img" src="map.png" alt="map.svg" />
 
             <ul class="list-group list-group-flush">
@@ -55,10 +55,10 @@
               <li class="list-group-item">
                 <h5 class="card-title">Explication</h5>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Explicabo aliquam pariatur ab! Culpa ipsa expedita laudantium,
-                  iure dolores deleniti nemo quaerat delectus aut! Et aperiam
-                  delectus consequuntur possimus ratione dolorum.
+                  Description : Cette visualisation met en réseau les 50 jeux les plus vendus par année, en intégrant leur genre. 
+Légende : Date > Genre > Titre du jeu
+Type de visualisation : Qualitatif, catégoriel 
+Jeu de données : Kaggle, Video Game Sales, 
                 </p>
               </li>
             </ul>
