--- a/home.html
+++ b/home.html
@@ -12,6 +12,12 @@
     />
   </head>
   <body>
+    <style>
+      .card-img-top {
+        height: 350px; /* Set the desired height for your images */
+        object-fit: cover; /* This property ensures that the image covers the entire container */
+      }
+    </style>
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-2 bg-dark sidebar">
@@ -42,98 +48,98 @@
           </ul>
         </div>
         <div class="col-md-10">
-          <h2 class="text-center py-4">Présentation d'équipe</h2>
-          <div class="row py-4">
+          <h2 class="text-center py-4">Présentation de l'équipe</h2>
+
+          <div class="row row-cols-1 row-cols-md-3 g-4">
             <!-- Card 1 -->
-            <div class="col-md-4">
-              <div class="card">
+            <div class="col">
+              <div class="card h-100">
                 <img
-                  src="path/to/image1.jpg"
-                  class="card-img-top"
+                  src="/img-collaborateurs/idir.jpeg"
+                  class="card-img-top img-thumbnail"
                   alt="Image 1"
                 />
                 <div class="card-body">
                   <h5 class="card-title">BELFARES Mohand Ou Idir</h5>
-                  <p class="card-text">Card 1 Subtitle or description.</p>
+                  <p class="card-text">M2 THYP</p>
                 </div>
               </div>
             </div>
-
-            <!-- Card 2 -->
-            <div class="col-md-4">
-              <div class="card">
+            <div class="col">
+              <div class="card h-100">
                 <img
-                  src="path/to/image2.jpg"
-                  class="card-img-top"
-                  alt="Image 2"
+                  src="img-collaborateurs/rayan.jpeg"
+                  class="card-img-top img-thumbnail"
+                  alt="Image 6"
                 />
                 <div class="card-body">
-                  <h5 class="card-title">BOUCHOUCHA Khalif</h5>
-                  <p class="card-text">Card 2 Subtitle or description.</p>
+                  <h5 class="card-title">KOUSSA Rayan</h5>
+                  <p class="card-text">M2 THYP</p>
                 </div>
               </div>
             </div>
-
-            <!-- Card 3 -->
-            <div class="col-md-4">
-              <div class="card">
+            <div class="col">
+              <div class="card h-100">
                 <img
-                  src="path/to/image3.jpg"
-                  class="card-img-top"
+                  src="img-collaborateurs/eva.jpg"
+                  class="card-img-top img-thumbnail"
                   alt="Image 3"
                 />
                 <div class="card-body">
                   <h5 class="card-title">BOTTEX Eva</h5>
-                  <p class="card-text">Card 3 Subtitle or description.</p>
+                  <p class="card-text">M2 NET</p>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row">
-            <!-- Card 1 -->
-            <div class="col-md-4">
-              <div class="card">
-                <img
-                  src="path/to/image1.jpg"
-                  class="card-img-top"
-                  alt="Image 1"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">CHÉRET Maïwenn</h5>
-                  <p class="card-text">Card 1 Subtitle or description.</p>
-                </div>
-              </div>
-            </div>
-
             <!-- Card 2 -->
-            <div class="col-md-4">
-              <div class="card">
+            <div class="col">
+              <div class="card h-100">
                 <img
-                  src="path/to/image2.jpg"
-                  class="card-img-top"
+                  src="img-collaborateurs/khalif.jpeg"
+                  class="card-img-top img-thumbnail"
                   alt="Image 2"
                 />
                 <div class="card-body">
-                  <h5 class="card-title">DEBABZA Med Idriss</h5>
-                  <p class="card-text">Card 2 Subtitle or description.</p>
+                  <h5 class="card-title">BOUCHOUCHA Khalif</h5>
+                  <p class="card-text">M2 NET</p>
                 </div>
               </div>
             </div>
 
             <!-- Card 3 -->
-            <div class="col-md-4">
-              <div class="card">
+
+            <!-- Add more cards as needed -->
+            <!-- Card 4 -->
+            <div class="col">
+              <div class="card h-100">
                 <img
-                  src="path/to/image3.jpg"
-                  class="card-img-top"
-                  alt="Image 3"
+                  src="img-collaborateurs/maiwenn.jpeg"
+                  class="card-img-top img-thumbnail"
+                  alt="Image 4"
                 />
                 <div class="card-body">
-                  <h5 class="card-title">KOUSSA Rayan</h5>
-                  <p class="card-text">Card 3 Subtitle or description.</p>
+                  <h5 class="card-title">CHÉRET Maïwenn</h5>
+                  <p class="card-text">M2 NET</p>
                 </div>
               </div>
             </div>
+
+            <!-- Card 5 -->
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="img-collaborateurs/idriss.jpeg"
+                  class="card-img-top img-thumbnail"
+                  alt="Image 5"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">DEBABZA Med Idriss</h5>
+                  <p class="card-text">M2 THYP</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 6 -->
           </div>
         </div>
       </div>
