--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
             <div class="col">
               <div class="card h-100">
                 <img
-                  src="/img-collaborateurs/idir.jpeg"
+                  src="img-collaborateurs/idir.jpeg"
                   class="card-img-top img-thumbnail"
                   alt="Image 1"
                 />
