--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
   <body>
     <style>
       .card-img-top {
-        height: 350px; /* Set the desired height for your images */
-        object-fit: cover; /* This property ensures that the image covers the entire container */
+        height: 350px;
+        object-fit: cover;
       }
     </style>
     <div class="container-fluid">
@@ -51,7 +51,6 @@
           <h2 class="text-center py-4">Présentation de l'équipe</h2>
 
           <div class="row row-cols-1 row-cols-md-3 g-4">
-            <!-- Card 1 -->
             <div class="col">
               <div class="card h-100">
                 <img
@@ -91,7 +90,6 @@
                 </div>
               </div>
             </div>
-            <!-- Card 2 -->
             <div class="col">
               <div class="card h-100">
                 <img
@@ -105,11 +103,6 @@
                 </div>
               </div>
             </div>
-
-            <!-- Card 3 -->
-
-            <!-- Add more cards as needed -->
-            <!-- Card 4 -->
             <div class="col">
               <div class="card h-100">
                 <img
@@ -123,8 +116,6 @@
                 </div>
               </div>
             </div>
-
-            <!-- Card 5 -->
             <div class="col">
               <div class="card h-100">
                 <img
@@ -138,8 +129,6 @@
                 </div>
               </div>
             </div>
-
-            <!-- Card 6 -->
           </div>
         </div>
       </div>
