--- a/home.html
+++ b/home.html
@@ -60,7 +60,7 @@
                 />
                 <div class="card-body">
                   <h5 class="card-title">BELFARES Mohand Ou Idir</h5>
-                  <p class="card-text">M2 THYP</p>
+                  <p class="card-text">M2 THYP <br />CSS, Intégration</p>
                 </div>
               </div>
             </div>
@@ -73,7 +73,10 @@
                 />
                 <div class="card-body">
                   <h5 class="card-title">KOUSSA Rayan</h5>
-                  <p class="card-text">M2 THYP</p>
+                  <p class="card-text">
+                    M2 THYP <br />
+                    Jeux de données, Visualisations Rstudio
+                  </p>
                 </div>
               </div>
             </div>
@@ -86,7 +89,10 @@
                 />
                 <div class="card-body">
                   <h5 class="card-title">BOTTEX Eva</h5>
-                  <p class="card-text">M2 NET</p>
+                  <p class="card-text">
+                    M2 NET <br />
+                    Jeux de données, Visualisations, Rédaction
+                  </p>
                 </div>
               </div>
             </div>
@@ -99,7 +105,10 @@
                 />
                 <div class="card-body">
                   <h5 class="card-title">BOUCHOUCHA Khalif</h5>
-                  <p class="card-text">M2 NET</p>
+                  <p class="card-text">
+                    M2 NET <br />
+                    Jeux de données, Visualisations, Rédaction
+                  </p>
                 </div>
               </div>
             </div>
@@ -112,7 +121,10 @@
                 />
                 <div class="card-body">
                   <h5 class="card-title">CHÉRET Maïwenn</h5>
-                  <p class="card-text">M2 NET</p>
+                  <p class="card-text">
+                    M2 NET <br />
+                    Rédaction, Coordination
+                  </p>
                 </div>
               </div>
             </div>
@@ -125,7 +137,10 @@
                 />
                 <div class="card-body">
                   <h5 class="card-title">DEBABZA Med Idriss</h5>
-                  <p class="card-text">M2 THYP</p>
+                  <p class="card-text">
+                    M2 THYP <br />
+                    Jeux de données, Visualisations, Intégration
+                  </p>
                 </div>
               </div>
             </div>
