--- a/cat-1.html
+++ b/cat-1.html
@@ -69,6 +69,7 @@ Feel free to change the height and width values or other styling below: -->
                       <br>
                       <strong>Jeu de données :</strong> Le jeu vidéo en France : une industrie et une pratique en progression continue par : La rédaction de vie-publique.fr
                   </p>
+                  <a href="https://www.vie-publique.fr/eclairage/284130-le-jeu-video-en-france-une-industrie-et-une-pratique-en-progression" target="_blank"> Le jeu vidéo en France : une industrie et une pratique en progression continue</a>
                   <p class="card-text">
                       <strong>Méthodologie :</strong>
                       <br>
